overflow fixed

--- a/mainapp/static/mainapp/css/style.css
+++ b/mainapp/static/mainapp/css/style.css
@@ -59,7 +59,7 @@ html {
 }
 
 .main-nav img {
-    height: 45px;
+    height: 36px;
     width: auto;
 }
 
@@ -313,7 +313,7 @@ html {
 
 .shop-info-body {
     margin-left: 10px;
-    padding: 15px;
+    padding: 15px 10px 10px 10px;
     margin-bottom: 20px;
     background-color: white;
     border: 1px solid rgba(199, 199, 199, 0.664);
@@ -335,6 +335,7 @@ html {
 }
 
 .shop-info-text {
+    width: 43%;
     display: inline-block;
     margin-left: 15px;
 }
@@ -351,7 +352,11 @@ html {
 }
 
 .shop-info-text p {
-    font-size: 90%;
+    width: 80%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 86%;
     font-weight: 500;
     margin-bottom: 5px;
 }
